# MCHelperTools

./: README.md
LinuxKeyHelpers/: Makefile  ScrollFixGnomeWayland.py  ToggleSprintBedrock  ToggleSprintBedrock.c  ToggleSprintBedrock.py  bedrock_toggle_sprint.py  bedrock_toggle_sprint_old.py  libmacro.py  requirements.txt  test.py
LinuxKeyHelpers/libmacro/: CMakeLists.txt  LICENSE  README.md  build.sh
LinuxKeyHelpers/libmacro/include/: libmacro.h
LinuxKeyHelpers/libmacro/python/: allpython.py  libmacro.py
LinuxKeyHelpers/libmacro/src/: libmacro.c
LinuxKeyHelpers/old/: FixGnomeScrollXwayland.py  common.py
WindowsKeyHelpers/: DisableCtrlEsc.ahk  DisableWinKey.ahk  MouseRemap.ahk  ToggleSprintBedrock.ahk
